<resources>
    <string name="app_name">MyCalcApp</string>
    <string name="calculator">Calculator</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="add">Add</string>
    <string name="divide">divide</string>
    <string name="subtract">subtract</string>
    <string name="multiply">multiply</string>
    <string name="result">results</string>
    <string name="please_input_numbers">Please input numbers</string>
</resources>